public enum Suggestion {
    END, OPEN, REVERSE, WAIT, MOVE, RESET
} //相当于是宏定义
